投稿時刻を日本時間への修正
defaultはenとなっている。
設定後、viewへ付与。

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="message-date">
       <!-- 投稿した時刻を出力する -->
-        <%= message.create.at %>
+        <%= l message.create.at %>
 
     </div>
   </div>
